force-app/main/default/objects/Agent_Parameter__c/fields/Error_Rate__c.field-meta.xml
<CustomField>
    <fullName>Error_Rate__c</fullName>
    <label>Error Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>