force-app/main/default/objects/Agent_Parameter__c/fields/Error_Rate_Desc__c.field-meta.xml
<CustomField>
    <fullName>Error_Rate_Desc__c</fullName>
    <defaultValue>&quot;Total error pada bulan berjalan&quot;</defaultValue>
    <label>Error Rate Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>