force-app/main/default/objects/Agent_Parameter__c/fields/Error_Rate_Score_1_Critical__c.field-meta.xml
<CustomField>
    <fullName>Error_Rate_Score_1_Critical__c</fullName>
    <label>Error Rate Score 1 (Critical)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>