force-app/main/default/objects/Agent_Parameter__c/fields/Error_Rate_Score_1_Desc__c.field-meta.xml
<CustomField>
    <fullName>Error_Rate_Score_1_Desc__c</fullName>
    <formula>IF(Error_Rate__c != 0,
Error_Rate_Desc__c &amp;&quot; &gt;= &quot;&amp; TEXT(Error_Rate_Score_1__c) &amp;&quot; (Non Critical) atau &gt;= &quot;&amp; TEXT(Error_Rate_Score_1_Critical__c) &amp; &quot; (Critical)&quot;
,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Error Rate Score 1 Desc</label>
    <type>Text</type>
</CustomField>