force-app/main/default/objects/Agent_Parameter__c/fields/Error_Rate_Score_2_Desc__c.field-meta.xml
<CustomField>
    <fullName>Error_Rate_Score_2_Desc__c</fullName>
    <formula>IF(Error_Rate__c != 0,
Error_Rate_Desc__c &amp;&quot; &quot;&amp; TEXT(Error_Rate_Score_2__c) &amp;&quot; - &quot;&amp; TEXT(Error_Rate_Score_1__c-1)&amp;&quot; (Non Critical) atau &quot;&amp; TEXT(Error_Rate_Score_2_Critical__c)&amp; &quot; (Critical)&quot;
,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Error Rate Score 2 Desc</label>
    <type>Text</type>
</CustomField>