force-app/main/default/objects/Agent_Parameter__c/fields/Error_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Rate_Type__c</fullName>
    <label>Error Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Count</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>