force-app/main/default/objects/Agent_Parameter__c/fields/Inforce_Desc__c.field-meta.xml
<CustomField>
    <fullName>Inforce_Desc__c</fullName>
    <defaultValue>&quot;Success Inforce&quot;</defaultValue>
    <label>Inforce Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>