force-app/main/default/objects/Agent_Parameter__c/fields/Inforce_Score_2_Desc__c.field-meta.xml
<CustomField>
    <fullName>Inforce_Score_2_Desc__c</fullName>
    <formula>IF(Inforce__c != 0,
Inforce_Desc__c &amp;&quot; &quot;&amp; TEXT(Inforce_Score_2__c) &amp;&quot; - &quot;&amp; TEXT(Inforce_Score_3__c)
,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inforce Score 2 Desc</label>
    <type>Text</type>
</CustomField>