force-app/main/default/objects/Agent_Parameter__c/fields/Inforce_Score_3_Desc__c.field-meta.xml
<CustomField>
    <fullName>Inforce_Score_3_Desc__c</fullName>
    <formula>IF( Inforce__c !=0 ,
Inforce_Desc__c &amp;&quot; &gt;= &quot;&amp; TEXT(Inforce_Score_3__c)
,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inforce Score 3 Desc</label>
    <type>Text</type>
</CustomField>