force-app/main/default/objects/Agent_Parameter__c/fields/Inforce_Type__c.field-meta.xml
<CustomField>
    <fullName>Inforce_Type__c</fullName>
    <label>Inforce Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Count</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>