force-app/main/default/objects/Agent_Parameter__c/fields/Late_Time__c.field-meta.xml
<CustomField>
    <fullName>Late_Time__c</fullName>
    <label>Late Time</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>