force-app/main/default/objects/Agent_Parameter__c/fields/Late_Time_Desc__c.field-meta.xml
<CustomField>
    <fullName>Late_Time_Desc__c</fullName>
    <defaultValue>&quot;Rata-rata keterlambatan hadir pada bulan berjalan&quot;</defaultValue>
    <label>Late Time Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>