force-app/main/default/objects/Agent_Parameter__c/fields/Late_Time_Score_1__c.field-meta.xml
<CustomField>
    <fullName>Late_Time_Score_1__c</fullName>
    <label>Late Time Score 1</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>