force-app/main/default/objects/Agent_Parameter__c/fields/Late_Time_Score_3_Desc__c.field-meta.xml
<CustomField>
    <fullName>Late_Time_Score_3_Desc__c</fullName>
    <formula>IF(Late_Time__c != 0,
Late_Time_Desc__c &amp;&quot; = &quot;&amp; TEXT(Late_Time_Score_3__c)
,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Late Time Score 3 Desc</label>
    <type>Text</type>
</CustomField>