force-app/main/default/objects/Agent_Parameter__c/fields/Late_Time_Type__c.field-meta.xml
<CustomField>
    <fullName>Late_Time_Type__c</fullName>
    <label>Late Time Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Count</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>