force-app/main/default/objects/Agent_Parameter__c/fields/Quality__c.field-meta.xml
<CustomField>
    <fullName>Quality__c</fullName>
    <formula>Call_Monitoring__c + Quiz__c  + Error_Rate__c + Survey_Push_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quality</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>