force-app/main/default/objects/Agent_Parameter__c/fields/Quality_A__c.field-meta.xml
<CustomField>
    <fullName>Quality_A__c</fullName>
    <label>Quality A</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>