force-app/main/default/objects/Agent_Parameter__c/fields/Quality_B__c.field-meta.xml
<CustomField>
    <fullName>Quality_B__c</fullName>
    <label>Quality B</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>