force-app/main/default/objects/Agent_Parameter__c/fields/Quality_C__c.field-meta.xml
<CustomField>
    <fullName>Quality_C__c</fullName>
    <label>Quality C</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>