force-app/main/default/objects/Agent_Parameter__c/fields/Quality_E__c.field-meta.xml
<CustomField>
    <fullName>Quality_E__c</fullName>
    <label>Quality E</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>