force-app/main/default/objects/Agent_Parameter__c/fields/Quiz_Desc__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Desc__c</fullName>
    <defaultValue>&quot;Rata-rata nilai Quiz pada bulan berjalan&quot;</defaultValue>
    <label>Quiz Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>