force-app/main/default/objects/Agent_Parameter__c/fields/Quiz_Score_1__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Score_1__c</fullName>
    <label>Quiz Score 1</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>