force-app/main/default/objects/Agent_Parameter__c/fields/Quiz_Score_3_Desc__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Score_3_Desc__c</fullName>
    <formula>IF(Quiz__c != 0,
Quiz_Desc__c &amp;&quot; &gt;= &quot;&amp; TEXT(Quiz_Score_3__c)
,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quiz Score 3 Desc</label>
    <type>Text</type>
</CustomField>