force-app/main/default/objects/Agent_Parameter__c/fields/Quiz_Type__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Type__c</fullName>
    <label>Quiz Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Count</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>