force-app/main/default/objects/Agent_Parameter__c/fields/RecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeID__c</fullName>
    <formula>CASE(Team__c, 
&apos;INBOUND CALL&apos;,&apos;0120k0000000peIAAQ&apos;,
&apos;WELCOME CALL&apos;,&apos;0120k0000000pe8AAA&apos;,
&apos;DIGITAL TEAM&apos;,&apos;0120k0000000peDAAQ&apos;,
&apos;RETENTION FU&apos;,&apos;0120k0000000peNAAQ&apos;,
&apos;RETENTION REINSTATE&apos;,&apos;0120k0000000peSAAQ&apos;,
&apos;RETENTION STANDBY&apos;,&apos;0120k0000000peXAAQ&apos;,
&apos;0120k0000000jA2AAI&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecordTypeID</label>
    <type>Text</type>
</CustomField>