force-app/main/default/objects/Agent_Parameter__c/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <label>Referral</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>