force-app/main/default/objects/Agent_Parameter__c/fields/Referral_Desc__c.field-meta.xml
<CustomField>
    <fullName>Referral_Desc__c</fullName>
    <defaultValue>&quot;Total Referral&quot;</defaultValue>
    <label>Referral Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>