force-app/main/default/objects/Agent_Parameter__c/fields/Referral_Score_3__c.field-meta.xml
<CustomField>
    <fullName>Referral_Score_3__c</fullName>
    <label>Referral Score 3</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>