force-app/main/default/objects/Agent_Parameter__c/fields/Referral_Score_3_Desc__c.field-meta.xml
<CustomField>
    <fullName>Referral_Score_3_Desc__c</fullName>
    <formula>IF(Referral__c != 0,
Referral_Desc__c &amp;&quot; &gt;= &quot;&amp; TEXT(Referral_Score_3__c)
,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Score 3 Desc</label>
    <type>Text</type>
</CustomField>