force-app/main/default/objects/Agent_Parameter__c/fields/Schedule_A__c.field-meta.xml
<CustomField>
    <fullName>Schedule_A__c</fullName>
    <label>Schedule A</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>07:45 AM</fullName>
            </value>
            <value>
                <fullName>08:15 AM</fullName>
            </value>
            <value>
                <fullName>10:45 AM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>