force-app/main/default/objects/Agent_Parameter__c/fields/Status_KPI__c.field-meta.xml
<CustomField>
    <fullName>Status_KPI__c</fullName>
    <label>Status KPI</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>