force-app/main/default/objects/Agent_Parameter__c/fields/Survey_Push_Rate__c.field-meta.xml
<CustomField>
    <fullName>Survey_Push_Rate__c</fullName>
    <label>Survey Push Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>