force-app/main/default/objects/Agent_Parameter__c/fields/Survey_Push_Rate_Desc__c.field-meta.xml
<CustomField>
    <fullName>Survey_Push_Rate_Desc__c</fullName>
    <defaultValue>&quot;Push Rate&quot;</defaultValue>
    <label>Survey Push Rate Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>