force-app/main/default/objects/Agent_Parameter__c/fields/Survey_Push_Rate_Score_1__c.field-meta.xml
<CustomField>
    <fullName>Survey_Push_Rate_Score_1__c</fullName>
    <label>Survey Push Rate Score 1</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>