force-app/main/default/objects/Agent_Parameter__c/fields/Survey_Push_Rate_Score_1_Desc__c.field-meta.xml
<CustomField>
    <fullName>Survey_Push_Rate_Score_1_Desc__c</fullName>
    <formula>IF(Survey_Push_Rate__c != 0,
Survey_Push_Rate_Desc__c &amp;&quot; &quot;&amp; TEXT(Survey_Push_Rate_Score_1__c) &amp;&quot; - &quot;&amp; TEXT(Survey_Push_Rate_Score_2__c)
,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Push Rate Score 1 Desc</label>
    <type>Text</type>
</CustomField>