force-app/main/default/objects/Agent_Parameter__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WELCOME CALL</fullName>
            </value>
            <value>
                <fullName>INBOUND CALL</fullName>
            </value>
            <value>
                <fullName>RETENTION STANDBY</fullName>
            </value>
            <value>
                <fullName>RETENTION REINSTATE</fullName>
            </value>
            <value>
                <fullName>RETENTION FU</fullName>
            </value>
            <value>
                <fullName>DIGITAL TEAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>