force-app/main/default/objects/Agent_Parameter__c/fields/Total_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Total_Parameter__c</fullName>
    <formula>Discipline__c + Productivity__c + Quality__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Parameter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>