force-app/main/default/objects/Agent_Parameter__c/recordTypes/DIGITAL_TEAM.recordType-meta.xml
<RecordType>
    <fullName>DIGITAL_TEAM</fullName>
    <active>true</active>
    <label>DIGITAL TEAM</label>
</RecordType>