force-app/main/default/objects/Agent_Parameter__c/recordTypes/INBOUND_CALL.recordType-meta.xml
<RecordType>
    <fullName>INBOUND_CALL</fullName>
    <active>true</active>
    <label>INBOUND CALL</label>
</RecordType>