force-app/main/default/objects/Agent_Parameter__c/recordTypes/RETENTION_FU.recordType-meta.xml
<RecordType>
    <fullName>RETENTION_FU</fullName>
    <active>true</active>
    <label>RETENTION FU</label>
</RecordType>