force-app/main/default/objects/Agent_Parameter__c/recordTypes/RETENTION_REINSTATE.recordType-meta.xml
<RecordType>
    <fullName>RETENTION_REINSTATE</fullName>
    <active>true</active>
    <label>RETENTION REINSTATE</label>
</RecordType>