force-app/main/default/objects/Agent_Parameter__c/recordTypes/RETENTION_STANDBY.recordType-meta.xml
<RecordType>
    <fullName>RETENTION_STANDBY</fullName>
    <active>true</active>
    <label>RETENTION STANDBY</label>
</RecordType>