force-app/main/default/objects/Agent_Parameter__c/recordTypes/WELCOME_CALL.recordType-meta.xml
<RecordType>
    <fullName>WELCOME_CALL</fullName>
    <active>true</active>
    <label>WELCOME CALL</label>
</RecordType>