force-app/main/default/objects/Agent_Parameter__c/validationRules/Total_Parameter_must_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Parameter_must_100</fullName>
    <active>true</active>
    <errorConditionFormula>IF ( TEXT(Status_KPI__c) == &apos;Active&apos;,
IF(Total_Parameter__c != 0,
IF(Total_Parameter__c*100 != 100,TRUE,FALSE)
,FALSE)
,FALSE)</errorConditionFormula>
    <errorMessage>Total Parameter KPI must 100%</errorMessage>
</ValidationRule>